[package]
name = "jg-pngme"
description = "My implementation of pngme"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshuagawley/jg-pngme"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Gawley <16921823+joshuagawley@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"